refactor: externalize all hardcoded service URLs to env vars
- Remove hardcoded localhost URLs from @Value defaults in Java files
- Fix critical bug: TenancyPaymentListener used hardcoded http://localhost:8083
- Fix SubscriptionTierClient wrong default port (8082 → config)
- Normalize all service config keys to services.{name}-service.url
- Convert gateway routes from http://${HOST:localhost}:PORT to ${URL:default}
- Externalize CORS origins via cors.allowed-origins property
- Add .env.production with ECS internal service discovery URLs
- Update .env and .env.example with all SERVICE_URL variables

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>